--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head>00
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,5 +29,26 @@
             <div class="placeholder">This is a place holder for an image</div>
         </div>
     </div>
-  </body>
+
+          <div class="second-block"> 
+            <div class="random">Some random information.</div>
+            <div class="images">
+                <img src="cat-1.jpg" alt="cute cat">
+                <img src="cat-2.jpg" alt="cute cat">
+                <img src="cat-3.jpg" alt="cute cat">
+                <img src="cat-4.jpg" alt="cute cat">
+            </div>    
+
+            <div class="texts">
+                <p>This is a subtext under an ilustration or image</p>
+                <p>This is a subtext under an ilustration or image</p>
+                <p>This is a subtext under an ilustration or image</p>
+                <p>This is a subtext under an ilustration or image</p>
+
+            </div>
+
+            </div>
+
+
+    </body>
 </html>
