--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>00
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,25 +30,40 @@
         </div>
     </div>
 
-          <div class="second-block"> 
-            <div class="random">Some random information.</div>
-            <div class="images">
-                <img src="cat-1.jpg" alt="cute cat">
-                <img src="cat-2.jpg" alt="cute cat">
-                <img src="cat-3.jpg" alt="cute cat">
-                <img src="cat-4.jpg" alt="cute cat">
-            </div>    
+    <div class="second-block"> 
+        <div class="random">Some random information.</div>
+        <div class="images">
+             <img src="cat-1.jpg" alt="cute cat">
+             <img src="cat-2.jpg" alt="cute cat">
+             <img src="cat-3.jpg" alt="cute cat">
+            <img src="cat-4.jpg" alt="cute cat">
+        </div>    
 
-            <div class="texts">
-                <p>This is a subtext under an ilustration or image</p>
-                <p>This is a subtext under an ilustration or image</p>
-                <p>This is a subtext under an ilustration or image</p>
-                <p>This is a subtext under an ilustration or image</p>
+         <div class="texts">
+            <p>This is a subtext under an ilustration or image</p>
+            <p>This is a subtext under an ilustration or image</p>
+            <p>This is a subtext under an ilustration or image</p>
+            <p>This is a subtext under an ilustration or image</p>
 
+        </div>
+     </div>
+
+     <div class="third-block">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="author">- Thor, God of Thunder</div>
+     </div>
+
+     <div class="fourth-block">
+        <div class="form">
+            <div class="left-info">
+                <div class="call">Call to action! It's time!</div>
+                <div class="info">Sign up for our product by clicking that button right over there!</div>
             </div>
+            <button class="button-2">Sign up</button>
+        </div>
+     </div>
 
-            </div>
-
+     <div class="footer">Copyright &#169 The Odin Project 2021</div>
 
     </body>
 </html>
