--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="header">
             <div class="title">Header Logo</div>
                 <div class="right-links">
-                    <a href="#">header link one</a>
+                    <a href="https://youtu.be/dQw4w9WgXcQ">Do not click on this one</a>
                     <a href="#">header link two</a>
                     <a href="#">header link three</a>
                 </div>   
@@ -36,7 +36,7 @@
              <img src="cat-1.jpg" alt="cute cat">
              <img src="cat-2.jpg" alt="cute cat">
              <img src="cat-3.jpg" alt="cute cat">
-            <img src="cat-4.jpg" alt="cute cat">
+             <img src="cat-4.jpg" alt="cute cat">
         </div>    
 
          <div class="texts">
