Fix placeholder image size to make it reactive to sizing

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button class="button-1">Sign up</button>
             </div>
 
-            <div class="placeholder">This is a placeholder for an image</div>
+            <div class="placeholder"><img id="placeholder" src="cat-1.jpg" alt="cute cat"></div>
         </div>
     </div>
 
