Change basic html text content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         <div class="content">    
             <div class="container">
-                <div class="hero-main">This website is awesome</div>
+                <div class="hero-main">¿Quieres tomate, Cherry?</div>
                 <div class="hero-body">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</div>
                 <button class="button-1">Sign up</button>
             </div>
